[package]
name = "mdbookshelf"
version = "0.1.0"
authors = ["Ramses Ladlani <rladlani@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
env_logger = "0.6.1"
git2 = "0.6.11"
log = "0.4.6"
mdbook = "0.2.3"
mdbook-epub = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"