[package]
name = "mdbookshelf"
version = "0.1.0"
authors = ["Ramses Ladlani <rladlani@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
env_logger = "0.6.1"
error-chain = "0.12.0"
failure = "0.1.5"
git2 = "0.6.11"
log = "0.4.6"
mdbook = "0.2.3"
mdbook-epub = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tera = "0.11"
toml = "0.5.0"
url = "1.7.2"
walkdir = "2.2.7"